replace static maps with pngs

--- a/app/bpp.html
+++ b/app/bpp.html
@@ -63,7 +63,11 @@
                 <h2 class="chart-title" style="text-align: center">Peta Sebaran Tumpahan Minyak Maret 2018</h2>
                 <div id="legend-minyak"></div>
 
-                <div id="map"></div>
+                <div id="map">
+                    <figure class="img">
+                        <img src="assets/maptumpahan.png" alt="Card image cap">
+                    </figure>
+                </div>
                 <p class="chart-copy" style="text-align: center">Sumber data: <a href="https://spbn.pusfatja.lapan.go.id/people/profile/minyak_tumpah/?limit=100&offset=0">Pusfatja LAPAN</a>
                 </p>
                 <div class="ancaman-lain">
@@ -82,7 +86,11 @@
             <h2 class="chart-title" style="text-align: center">Peta Delineasi Kawasan Strategis Nasional IKN</h2>
             <div id="legend-ikn"></div>
 
-            <div id="map-ikn"></div>
+            <div id="map-ikn">
+                <figure class="img">
+                    <img src="assets/mapikn.png" alt="Card image cap">
+                </figure>
+            </div>
 
             <p class="chart-copy" style="text-align: center">
                 Sumber data: <a href="https://twitter.com/bappenasri/status/1222009308310728706">Bappenas</a>
